--- a/chrome_extension/popup.html
+++ b/chrome_extension/popup.html
@@ -1,15 +1,204 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <style>
-      body { width: 200px; padding: 10px; font-family: sans-serif; text-align: center; }
-      h2 { margin-top: 0; }
-      .status { font-weight: bold; }
-    </style>
-  </head>
-  <body>
-    <h2>Leo Link 🦁</h2>
-    <p>Status: <span class="status">Active</span></p>
-    <p><small>Connecting to localhost:2345</small></p>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <style>
+    :root {
+      --bg-dark: #0f172a;
+      --bg-card: #1e293b;
+      --amber: #fbbf24;
+      --amber-glow: rgba(251, 191, 36, 0.2);
+      --text-main: #f8fafc;
+      --text-dim: #94a3b8;
+      --green: #22c55e;
+      --red: #ef4444;
+    }
+
+    body {
+      width: 320px;
+      margin: 0;
+      padding: 20px;
+      font-family: 'Inter', -apple-system, system-ui, sans-serif;
+      background-color: var(--bg-dark);
+      color: var(--text-main);
+      overflow: hidden;
+    }
+
+    .header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 24px;
+    }
+
+    .logo-area {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
+
+    .logo-circle {
+      width: 40px;
+      height: 40px;
+      background: linear-gradient(135deg, #fbbf24 0%, #f59e0b 100%);
+      border-radius: 12px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 24px;
+      box-shadow: 0 4px 12px var(--amber-glow);
+    }
+
+    h1 {
+      font-size: 18px;
+      margin: 0;
+      font-weight: 700;
+      letter-spacing: -0.5px;
+    }
+
+    .version {
+      font-size: 11px;
+      color: var(--text-dim);
+      background: var(--bg-card);
+      padding: 2px 6px;
+      border-radius: 4px;
+    }
+
+    .status-card {
+      background-color: var(--bg-card);
+      border: 1px solid rgba(255, 255, 255, 0.05);
+      border-radius: 16px;
+      padding: 16px;
+      margin-bottom: 20px;
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
+
+    .status-dot {
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background-color: var(--text-dim);
+      position: relative;
+    }
+
+    .status-dot.online {
+      background-color: var(--green);
+      box-shadow: 0 0 8px var(--green);
+    }
+
+    .status-dot.online::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      background-color: var(--green);
+      animation: pulse 2s infinite;
+    }
+
+    .status-dot.offline {
+      background-color: var(--red);
+    }
+
+    #status-text {
+      font-size: 13px;
+      font-weight: 500;
+      color: var(--text-dim);
+    }
+
+    #status-text.online-text {
+      color: var(--text-main);
+    }
+
+    .actions {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 12px;
+    }
+
+    button {
+      background-color: var(--bg-card);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      color: var(--text-main);
+      padding: 12px;
+      border-radius: 12px;
+      font-size: 13px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.2s;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 8px;
+    }
+
+    button:hover {
+      border-color: var(--amber);
+      background-color: rgba(251, 191, 36, 0.05);
+      transform: translateY(-2px);
+    }
+
+    button .icon {
+      font-size: 18px;
+    }
+
+    .footer {
+      margin-top: 24px;
+      text-align: center;
+      font-size: 11px;
+      color: var(--text-dim);
+    }
+
+    @keyframes pulse {
+      0% {
+        transform: scale(1);
+        opacity: 0.8;
+      }
+
+      100% {
+        transform: scale(2.5);
+        opacity: 0;
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <div class="header">
+    <div class="logo-area">
+      <div class="logo-circle">🦁</div>
+      <div>
+        <h1>Leo Link</h1>
+        <span class="version">v1.2.0</span>
+      </div>
+    </div>
+    <button id="refresh-btn" style="padding: 6px; border-radius: 8px;">🔄</button>
+  </div>
+
+  <div class="status-card">
+    <div id="status-dot" class="status-dot"></div>
+    <span id="status-text">Checking server...</span>
+  </div>
+
+  <div class="actions">
+    <button id="open-dashboard">
+      <span class="icon">🏠</span>
+      Dashboard
+    </button>
+    <button id="open-moments">
+      <span class="icon">📸</span>
+      Moments
+    </button>
+  </div>
+
+  <div class="footer">
+    Roaringly fast. Pure Rust.
+  </div>
+
+  <script src="popup.js"></script>
+</body>
+
 </html>
